@@ -1,6 +1,8 @@
 Changes for the Labyrinth-Test-Harness
 ======================================
 
+        - elevated Test::Database to required.
+
 1.05	2014-11-15
         - Windows cannot delete directories/files while processing.
 
